--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "tsc -b --noEmit && eslint .",
     "preview": "vite preview",
     "deploy": "npm run build && gh-pages -d dist"
   },
